--- a/src/app/Components/cats/cats.component.html
+++ b/src/app/Components/cats/cats.component.html
@@ -1,4 +1,26 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<h1>Fun cat fact:</h1>
+<h1>Fun cat facts:</h1>
 <hr>
-<h3 class="{{error? 'text-danger':''}}" [innerText]="info" ></h3>
+<table *ngIf="!error" class="table table-striped">
+    <thead>
+        <tr>
+            <td>
+                Facts
+            </td>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let f of info">
+            <ul>
+                <li>
+                    <ul>
+                        <li>
+                    {{f}}
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </tr>
+    </tbody>
+</table>
+<h3 *ngIf="error" class="text-danger">An error occured!</h3>
